--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
 * {
   padding: 0;
   margin: 0;
-  color: black;
   font-family: monospace;
+  font-size: 1em;
+  
+  user-select: none;
+}
+
+html, body {
+  height: 100%;
 }
 
 body {
-  margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1 {
@@ -16,6 +24,19 @@ h1 {
 #links {
   display: flex;
   flex-direction: column;
+
+  width: 300px;
+  max-width: 90vw !important;
+  margin: 0 auto;
+
+  background-color: rgb(5, 5, 5);
+  padding: 20px;
+
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+
+#links * {
+  color: white;
 }
 
 #links a {
@@ -27,4 +48,8 @@ h1 {
   display: inline-block;
   text-decoration: none;
   margin-right: 7px;
+}
+
+#links #blink {
+  margin-top: 20px;
 }
