--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
   margin: 0;
   font-family: monospace;
   font-size: 1em;
-  
-  user-select: none;
 }
 
 html, body {
@@ -12,10 +10,6 @@ html, body {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
   background-color: rgba(230, 230, 230, 1);
   overflow: hidden;
 }
@@ -24,16 +18,40 @@ h1 {
   margin: 20px 0;
 }
 
-.terminal {
-  position: relative;
 
-  width: 300px;
+.terminal {
+  position: absolute;
+  overflow: hidden;
+  left: 50%;
+  top: 70%;
+
+  transform: translateX(-50%) translateY(-50%);
+  opacity: 0;
+
+  width: 500px;
   max-width: 90vw !important;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 
   background-color: rgba(5, 5, 5, 1);
+  color: white;
 
   box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+
+  transition: top 0.7s cubic-bezier(0.34, 1.56, 0.64, 1), opacity 0.6s ease-in-out;
+}
+
+.terminal.center {
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.terminal *::selection {
+  color: black;
+  background-color: rgb(255, 52, 52);
 }
 
 
@@ -46,6 +64,7 @@ h1 {
 
 .terminal__content * {
   color: white;
+  white-space: break-spaces;
 }
 
 .terminal__content a {
@@ -59,6 +78,30 @@ h1 {
   margin-right: 7px;
 }
 
-.terminal__content #blink {
-  margin-top: 20px;
+
+.terminal__input {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  padding: 0 20px 20px 20px;
+}
+
+.terminal__input #form {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 2;
+}
+
+.terminal__input #form  #blink {
+  padding: 0;
+
+  background-color: transparent;
+  border: none;
+  color: white;
+  flex-grow: 1;
+  min-width: 100%;
+}
+
+#blink:focus {
+  outline: none;
 }
