--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ h1 {
 
 
 .terminal {
+  padding: 20px 20px 19px 20px;
   position: absolute;
-  overflow: hidden;
   left: 50%;
   top: 70%;
 
@@ -57,8 +57,6 @@ h1 {
 
 
 .terminal__output {
-  padding: 20px 20px 0 20px;
-
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
@@ -85,55 +83,61 @@ h1 {
   margin-right: 7px;
 } */
 
+.terminal__output * {
+  color: inherit;
+  text-shadow: inherit;
+  font-weight: inherit;
+}
 
-
-.terminal__output .message-error {
+.terminal__output .message--error {
   color: rgb(255, 45, 45);
   text-shadow: 0px 0px 2px rgba(255, 45, 45, 0.4);
   font-weight: bold;
 }
 
-.terminal__output .message-button, .terminal__output .message-link {
+.fragment--link {
   text-decoration: underline;
 }
 
-.terminal__output .message-button:hover, .terminal__output .message-link:hover  {
+.fragment--link:hover  {
   cursor: pointer;
   text-transform: uppercase;
 }
 
+b {
+  font-weight: bold !important;
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.8) !important;
+}
 
 
 
 
-.terminal__input {
+
+.terminal__input-container {
   display: flex;
   flex-direction: row;
   gap: 7px;
-  padding: 0 20px 20px 20px;
 }
 
-.terminal__input #form {
+.terminal__input-container #terminal__input-form {
   display: flex;
   flex-direction: row;
   flex-grow: 2;
 }
 
-.terminal__input #form  #terminal-input {
+.terminal__input-container #terminal__input-form  #terminal__input-field {
   padding: 0;
 
   background-color: transparent;
-  border: none;
+  border: none !important;
   color: white;
   flex-grow: 1;
   min-width: 100%;
+  height: 16px;
 }
 
-#terminal-input:focus {
+#terminal__input-field:focus {
   outline: none;
 }
 
 
-b {
-  text-shadow: 0 0 3px rgba(255, 255, 255, 0.8);
-}
