--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ h1 {
 .terminal__output * {
   color: white;
   white-space: break-spaces;
-  overflow-wrap: anywhere;
 }
 
 .terminal__output a {
@@ -104,12 +103,26 @@ h1 {
   text-transform: uppercase;
 }
 
+table {
+  border-spacing: 0 50px;
+}
+
+table, th, tr, td {
+  text-align: left;
+
+  border-collapse: collapse;
+  column-gap: 6px;
+  
+  border: none;
+  outline: none;
+  vertical-align: top;
+}
+
+
 b {
   font-weight: bold !important;
   text-shadow: 0 0 3px rgba(255, 255, 255, 0.8) !important;
 }
-
-
 
 
 
